# CG2_1

CG2_task1_Galushko/: README.txt
CG2_task1_Galushko/linux/: build_help.txt  ecs_tutorial.txt  level_format.txt
CG2_task1_Galushko/linux/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CG2_task1_Galushko/linux/source/: AttackFunctions.cpp  Game.cpp  GameLoadLevel.cpp  PotionsCatalogue.h  Renderer.cpp  S_GameGuiRenderSys.cpp  S_GameInputController.cpp  S_GameTick.cpp  WeaponsCatalogue.cpp  main.cpp  stl.h
CG2_task1_Galushko/windows/CG2_GameTemplate/: AttackFunctions.cpp  AttackFunctions.h  CG2_GameTemplate.vcxproj  CG2_GameTemplate.vcxproj.filters  EcsBosses.cpp  EcsComponents.h  EcsEntities.cpp  EcsEntities.h  Game.cpp  Game.h  PotionsCatalogue.cpp  S_GameGuiRenderSys.cpp  WeaponsCatalogue.h  main.cpp
CG2_task1_Galushko/windows/CG2_GameTemplate/x64/Release/CG2_GameTemplate.tlog/: CG2_GameTemplate.lastbuildstate  CG2_GameTemplate.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CG2_task1_Galushko/windows/x64/Debug/: debugLevel.ll
CG2_task1_Galushko/windows/x64/Release/: CG2_GameTemplate.ipdb  resources.txt
CG2_task1_Galushko/windows/x64/Release/level1/: level1_floor.ll
CG2_task1_Galushko/windows/x64/Release/tileset/: Release - Ярлык.lnk
